<resources>
    <string name="app_name">MyClip</string>
    <string name="title_home">Home</string>
    <string name="title_report">Report</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_currency">Currency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="byn">BYN</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rub">RUB</string>
    <string name="uah">UAH</string>
    <string name="expenses">Expenses</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="date">Date</string>
    <string name="amount">amount</string>
    <string name="description">description</string>
</resources>