<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shcherbakov_bogdan.myclip.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_DialogIncome"
            app:destination="@id/DialogIncome" />
        <action
            android:id="@+id/action_navigation_home_to_DialogExpenses"
            app:destination="@id/DialogExpenses" />
    </fragment>

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.shcherbakov_bogdan.myclip.ui.fragments.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_inbox"
        android:name="com.shcherbakov_bogdan.myclip.ui.fragments.inbox.InboxFragment"
        android:label="@string/title_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/navigation_currency"
        android:name="com.shcherbakov_bogdan.myclip.ui.fragments.currency.CurrencyFragment"
        android:label="Currency"
        tools:layout="@layout/fragment_currency" />
    <dialog
        android:id="@+id/DialogIncome"
        android:name="com.shcherbakov_bogdan.myclip.ui.dialogs.DialogIncome"
        android:label="DialogIncome">
        <action
            android:id="@+id/action_DialogIncome_to_dialogAccount"
            app:destination="@id/dialogAccount" />
        <action
            android:id="@+id/action_DialogIncome_to_dialogCategory"
            app:destination="@id/dialogCategory" />
    </dialog>
    <dialog
        android:id="@+id/DialogExpenses"
        android:name="com.shcherbakov_bogdan.myclip.ui.dialogs.DialogExpenses"
        android:label="DialogExpenses">
        <action
            android:id="@+id/action_DialogExpenses_to_dialogAccount"
            app:destination="@id/dialogAccount" />
        <action
            android:id="@+id/action_DialogExpenses_to_dialogCategory"
            app:destination="@id/dialogCategory" />
    </dialog>
    <dialog
        android:id="@+id/dialogAccount"
        android:name="com.shcherbakov_bogdan.myclip.ui.dialogs.account.DialogAccount"
        android:label="DialogAccount" />
    <dialog
        android:id="@+id/dialogCategory"
        android:name="com.shcherbakov_bogdan.myclip.ui.dialogs.category.DialogCategory"
        android:label="DialogCategory" />
</navigation>