<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/karry">

        <TextView
            android:id="@+id/condition_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/expenses"
            android:textColor="@color/red"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/amount_editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/amount"
            android:padding="16dp"
            android:inputType="numberDecimal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/condition_textView" />

        <ImageView
            android:id="@+id/image_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_arrow_downward"
            app:layout_constraintBottom_toBottomOf="@id/amount_editText"
            app:layout_constraintEnd_toStartOf="@id/amount_editText"
            app:layout_constraintTop_toTopOf="@id/amount_editText"
            app:tint="@color/red" />

        <TextView
            android:textColor="@color/mate_black"
            android:id="@+id/account_textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:text="Choose your account"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_editText" />

        <ImageView
            android:id="@+id/image_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account_balance_wallet"
            app:layout_constraintBottom_toBottomOf="@id/account_textView"
            app:layout_constraintEnd_toStartOf="@id/account_textView"
            app:layout_constraintTop_toTopOf="@id/account_textView"
            app:tint="@color/mate_black" />

        <TextView
            android:textColor="@color/mate_black"
            android:id="@+id/category_textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="16dp"
            android:text="Choose category"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_textView" />

        <ImageView
            android:id="@+id/image_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_category"
            app:layout_constraintBottom_toBottomOf="@id/category_textView"
            app:layout_constraintEnd_toStartOf="@id/category_textView"
            app:layout_constraintTop_toTopOf="@id/category_textView"
            app:tint="@color/mate_black" />

        <EditText
            android:id="@+id/description_editText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_textView" />

        <ImageView
            android:id="@+id/image_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_description"
            app:layout_constraintBottom_toBottomOf="@id/description_editText"
            app:layout_constraintEnd_toStartOf="@id/description_editText"
            app:layout_constraintTop_toTopOf="@id/description_editText"
            app:tint="@color/mate_black" />

        <TextView
            android:textColor="@color/mate_black"
            android:id="@+id/date_picker"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/date"
            android:textSize="24sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_editText" />

        <ImageView
            android:id="@+id/image_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_edit_date"
            app:layout_constraintBottom_toBottomOf="@id/date_picker"
            app:layout_constraintEnd_toStartOf="@id/date_picker"
            app:layout_constraintTop_toTopOf="@id/date_picker"
            app:tint="@color/mate_black" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_picker" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@id/save_button"
            app:layout_constraintTop_toBottomOf="@id/date_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>