<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:padding="16dp"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/karry">

            <TextView
                android:id="@+id/condition_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="@color/green"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/amount_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/condition_textView" />

            <ImageView
                android:id="@+id/image_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_upward"
                app:layout_constraintBottom_toBottomOf="@id/amount_editText"
                app:layout_constraintEnd_toStartOf="@id/amount_editText"
                app:layout_constraintTop_toTopOf="@id/amount_editText"
                app:tint="@color/green" />

            <TextView
                android:textColor="@color/mate_black"
                android:id="@+id/account_textView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Wallet"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount_editText" />

            <ImageView
                android:id="@+id/image_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_account_balance_wallet"
                app:layout_constraintBottom_toBottomOf="@id/account_textView"
                app:layout_constraintEnd_toStartOf="@id/account_textView"
                app:layout_constraintTop_toTopOf="@id/account_textView"
                app:tint="@color/mate_black"/>

            <TextView
                android:textColor="@color/mate_black"
                android:id="@+id/category_textView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Cash"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_textView" />

            <ImageView
                android:id="@+id/image_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_category"
                app:layout_constraintBottom_toBottomOf="@id/category_textView"
                app:layout_constraintEnd_toStartOf="@id/category_textView"
                app:layout_constraintTop_toTopOf="@id/category_textView"
                app:tint="@color/mate_black"/>

            <EditText
                android:id="@+id/description_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_textView" />

            <ImageView
                android:id="@+id/image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_description"
                app:layout_constraintBottom_toBottomOf="@id/description_editText"
                app:layout_constraintEnd_toStartOf="@id/description_editText"
                app:layout_constraintTop_toTopOf="@id/description_editText"
                app:tint="@color/mate_black"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_editText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                app:layout_constraintTop_toBottomOf="@id/description_editText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>